--- a/for-regulators.html
+++ b/for-regulators.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
-        content="Guidance for regulators on applying the EntityWorks Standard to evaluate how AI systems represent people, organisations, relationships, and ideas.">
+        content="AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational decision-making. As these systems take on roles in retrieval, reasoning, classification, and decision-support, regulators require clarity on how models form and maintain their understanding of people, organisations, relationships, and ideas.">
   <link rel="canonical" href="https://entityworks.ai/for-regulators.html">
 
   <!-- Favicon -->
@@ -157,7 +157,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "EntityWorks — For Regulators",
-    "description": "Guidance for regulators on applying the EntityWorks Standard to evaluate how AI systems represent people, organisations, relationships, and ideas.",
+    "description": "AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational decision-making. As these systems take on roles in retrieval, reasoning, classification, and decision-support, regulators require clarity on how models form and maintain their understanding of people, organisations, relationships, and ideas.",
     "url": "https://entityworks.ai/for-regulators.html",
     "publisher": {
       "@type": "Organization",
@@ -184,105 +184,80 @@
   <main>
     <h1>FOR REGULATORS</h1>
 
-    <p><strong>AI Perception provides regulators with a structured way to examine how AI systems understand and represent people, organisations, relationships, and ideas.</strong></p>
-
     <p>
-      Within the EntityWorks Standard, AI Perception defines the conceptual and technical layer that governs how models form, update, and express their understanding of entities. For regulators, this offers a clear, discipline-level framework for assessing representational behaviour in AI systems — without needing access to proprietary model internals or architecture. The focus is on what the system <em>does</em> in practice: how it describes entities, how consistently it maintains identity, and how those representations influence downstream decisions.
-    </p>
-
-    <h2>Why AI Perception matters for regulators</h2>
-
-    <p>
-      AI systems are increasingly used in contexts where regulatory oversight already exists — from financial services and healthcare to public information, risk assessment, and citizen-facing services. In these environments, the way a system represents an entity can shape how that entity is treated: which information is shown, which options are surfaced, and which decisions are supported or recommended.
+      AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational decision-making. As these systems take on roles in retrieval, reasoning, classification, and decision-support, regulators require clarity on how models form and maintain their understanding of people, organisations, relationships, and ideas.
     </p>
 
     <p>
-      AI Perception provides a discipline for examining this representational layer directly. Rather than treating model behaviour as opaque or incidental, regulators can use the EntityWorks Standard to ask structured questions about how entities are being interpreted, whether those interpretations are stable, and how they align with real-world identity and legal status.
+      AI Perception provides this clarity by defining the structures and evaluative principles that determine how models represent entities and how that representation influences downstream behaviour. For regulators, this discipline offers a coherent way to assess whether AI systems interpret entities consistently, transparently, and in alignment with real-world meaning.
     </p>
 
-    <h2>Regulatory questions AI Perception helps answer</h2>
+    <h2>Regulatory challenges addressed by the EntityWorks Standard</h2>
 
     <p>
-      The EntityWorks Standard allows regulators to frame clear, repeatable questions about representational behaviour in AI systems, such as:
+      Regulators face increasing pressure to evaluate the behaviour of AI systems without access to model internals or proprietary architectures. The EntityWorks Standard provides a structured way to assess representational behaviour using external, observable criteria.
     </p>
+
+    <p><strong>Key challenges addressed by the Standard include:</strong></p>
 
     <ul>
-      <li>How does the system distinguish between two entities with similar names or overlapping attributes?</li>
-      <li>Does the model maintain the correct attributes for a regulated entity over time and across use cases?</li>
-      <li>Are there conditions under which an entity is systematically misrepresented or conflated with another?</li>
-      <li>How stable are the system’s representations when new information or prompts are introduced?</li>
-      <li>What evidence exists that representational behaviour aligns with regulatory expectations and legal reality?</li>
+      <li>interpretive opacity, where regulators cannot see how a model is understanding or representing an entity</li>
+      <li>inconsistent or unstable representations, which undermine reliability in regulated environments</li>
+      <li>cross-model divergence, where different AI systems form conflicting understandings of the same entity</li>
+      <li>lack of evaluative criteria, making it difficult to assess representational behaviour objectively</li>
+      <li>representational drift, where model understanding shifts over time without transparency or accountability</li>
+    </ul>
+
+    <h2>How regulators can use the Standard</h2>
+
+    <p>
+      Regulators can use the EntityWorks Standard to establish a structured basis for evaluating how AI systems represent entities within their oversight remit. The Standard provides a clear set of definitions, interpretive rules, and diagnostic criteria that allow regulators to assess representational behaviour externally, without requiring technical access to model internals or proprietary systems.
+    </p>
+
+    <p><strong>The Standard enables regulators to:</strong></p>
+
+    <ul>
+      <li>assess representational behaviour using consistent, non-technical criteria</li>
+      <li>set expectations and guidance for representational stability and accuracy</li>
+      <li>identify risks arising from inconsistent, opaque, or incorrect model understanding</li>
+      <li>support oversight and assurance work across sectors and jurisdictions</li>
+      <li>harmonise evaluative approaches around a shared conceptual framework</li>
     </ul>
 
     <p>
-      These questions operate at the level of observable behaviour and structured evaluation, rather than internal technical implementation details. This aligns with how regulators typically conduct oversight: by focusing on outcomes, evidence, and accountability.
+      Regulators may draw on the Standard where it provides clarity, structure, or evaluative support within their existing oversight frameworks.
     </p>
 
-    <h2>Using the EntityWorks Standard in oversight and evaluation</h2>
+    <h2>What the Standard provides to regulators</h2>
 
     <p>
-      The EntityWorks Standard sets out the definitions, criteria, and diagnostic methods that regulators can use when assessing representational behaviour in AI systems. It provides:
+      The EntityWorks Standard offers regulators a coherent framework for understanding, evaluating, and governing the representational behaviour of AI systems. It provides the conceptual structures and criteria needed to assess how models form, update, and express their understanding of people, organisations, relationships, and ideas.
     </p>
+
+    <p><strong>Regulators can draw on:</strong></p>
 
     <ul>
-      <li>Canonical definitions of AI Perception and related concepts as used within the Standard</li>
-      <li>Structured methods for evaluating entity representations through prompts, scenarios, and test cases</li>
-      <li>Criteria for assessing representational stability, coherence, and alignment with real-world entities</li>
-      <li>Guidance on documenting findings in a way that supports governance, enforcement, and future review</li>
+      <li>canonical definitions that establish consistent terminology</li>
+      <li>structural frameworks describing how machine-interpreted identity is formed</li>
+      <li>diagnostic logic for assessing representational stability and behaviour</li>
+      <li>accreditation criteria that support transparent evaluation and assurance</li>
+      <li>forthcoming machine-readable specifications designed for technical reference and oversight</li>
     </ul>
-
-    <p>
-      These tools can be applied both in proactive supervision (for example, evaluating a system before deployment) and in reactive contexts (for example, investigating representational failures or complaints).
-    </p>
-
-    <h2>Relationship to existing governance and safety frameworks</h2>
-
-    <p>
-      AI Perception does not replace existing governance, safety, or compliance frameworks. Instead, it provides a focused lens on one specific but critical dimension: how AI systems represent entities. This lens can be integrated into:
-    </p>
-
-    <ul>
-      <li>Responsible AI and model risk management frameworks</li>
-      <li>Sector-specific regulatory regimes and guidance</li>
-      <li>Data protection, fairness, and non-discrimination assessments</li>
-      <li>Audit and assurance processes for high-impact AI systems</li>
-    </ul>
-
-    <p>
-      By making the representational layer explicit and examinable, AI Perception helps regulators connect existing obligations to concrete, testable aspects of model behaviour.
-    </p>
-
-    <h2>Engaging with EntityWorks as a standards body</h2>
-
-    <p>
-      EntityWorks operates as an AI-native standards organisation focused on AI Perception and machine interpretation. Regulators may:
-    </p>
-
-    <ul>
-      <li>Reference the EntityWorks Standard when developing guidance, expectations, or supervisory approaches</li>
-      <li>Use the Standard to inform internal assessment methodologies and oversight criteria</li>
-      <li>Request briefings or technical explanations on specific aspects of AI Perception and representational behaviour</li>
-      <li>Explore how accreditation marks and diagnostic methods could support sector-level governance</li>
-    </ul>
-
-    <p>
-      Where appropriate, EntityWorks can provide structured support to help regulators interpret and apply the Standard within their existing mandates and legal frameworks.
-    </p>
 
     <h2>Where to go next</h2>
 
     <p>
-      For regulators and oversight bodies looking to work more deeply with AI Perception, the following pages provide the next points of reference within the EntityWorks Standard:
+      For regulators seeking further detail on the discipline and its evaluative structures, the following pages provide the next points of reference within the EntityWorks Standard:
     </p>
 
     <ul>
-      <li><strong>The Standard</strong> — a structured overview of the EntityWorks Standard, including its definitions, frameworks, and accreditation structures</li>
-      <li><strong>AI Perception</strong> — the core disciplinary definition and conceptual foundations of AI Perception as used within the Standard</li>
-      <li><strong>Publications</strong> — formal papers and resources that expand the theory, methods, and applications of AI Perception</li>
+      <li><strong>The Standard</strong> — the structural, diagnostic, and governance criteria used to evaluate representational behaviour</li>
+      <li><strong>AI Perception</strong> — the disciplinary foundation that defines how AI systems form and maintain their understanding of entities</li>
+      <li><strong>Publications</strong> — formal papers and resources that expand the theory and regulatory applications of AI Perception</li>
     </ul>
 
     <p>
-      Regulators and public bodies with specific questions about applying the EntityWorks Standard in their own context may contact EntityWorks directly via <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a> to request further information or a structured briefing.
+      These materials provide the definitions, structures, and criteria required to work with the discipline in regulatory contexts. Regulators may also request clarification or interpretive guidance from the EntityWorks Standards Office through the official correspondence channel.
     </p>
 
     <p class="last-updated">
