--- a/for-regulators.html
+++ b/for-regulators.html
@@ -24,9 +24,7 @@
       --ew-muted: #666666;
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
@@ -36,7 +34,7 @@
       background-color: #fff;
     }
 
-    /* Global site header / nav */
+    /* Global nav */
     .site-header {
       border-bottom: 1px solid var(--ew-border);
       background: #ffffff;
@@ -85,63 +83,11 @@
       padding: 0 1rem 3rem;
     }
 
-    /* Hero block (not used on this page but retained for stylesheet integrity) */
-    .hero {
-      max-width: 36rem;
-      margin: 3rem auto 3rem auto;
-    }
+    main h1 { font-size: 2rem; margin-top: 0; margin-bottom: 0.5rem; }
+    main h2 { font-size: 1.35rem; margin-top: 2rem; margin-bottom: 0.75rem; }
 
-    .hero-lead {
-      font-size: 1.2rem;
-      line-height: 1.7;
-      margin: 0;
-    }
-
-    .hero-links {
-      margin-top: 1rem;
-      font-size: 0.98rem;
-    }
-
-    .hero-links a {
-      text-decoration: none;
-      color: var(--ew-accent);
-    }
-
-    .hero-links a:hover,
-    .hero-links a:focus {
-      text-decoration: underline;
-    }
-
-    main h1 {
-      font-size: 2rem;
-      margin-top: 0;
-      margin-bottom: 0.5rem;
-    }
-
-    main h2 {
-      font-size: 1.35rem;
-      margin-top: 2rem;
-      margin-bottom: 0.75rem;
-    }
-
-    main h3 {
-      font-size: 1.1rem;
-      margin-top: 1.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    p {
-      margin: 0.75rem 0;
-    }
-
-    ul {
-      margin: 0.5rem 0 1rem 1.2rem;
-      padding: 0;
-    }
-
-    li {
-      margin: 0.25rem 0;
-    }
+    ul { margin: 0.5rem 0 1rem 1.2rem; padding: 0; }
+    li { margin: 0.25rem 0; }
 
     .last-updated {
       font-size: 0.85rem;
@@ -157,18 +103,14 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "EntityWorks — For Regulators",
-    "description": "AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational decision-making. As these systems take on roles in retrieval, reasoning, classification, and decision-support, regulators require clarity on how models form and maintain their understanding of people, organisations, relationships, and ideas.",
+    "description": "Guidance for regulators evaluating representational behaviour in AI systems using the EntityWorks Standard.",
     "url": "https://entityworks.ai/for-regulators.html",
-    "publisher": {
-      "@type": "Organization",
-      "name": "EntityWorks"
-    }
+    "publisher": { "@type": "Organization", "name": "EntityWorks" }
   }
   </script>
 </head>
 
 <body>
-  <!-- Global site header / nav -->
   <header class="site-header">
     <div class="nav-inner">
       <a href="/index.html" class="brand">EntityWorks</a>
@@ -184,22 +126,15 @@
   <main>
     <h1>FOR REGULATORS</h1>
 
-    <p>
-      AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational decision-making. As these systems take on roles in retrieval, reasoning, classification, and decision-support, regulators require clarity on how models form and maintain their understanding of people, organisations, relationships, and ideas.
-    </p>
+    <p>AI systems increasingly act as an initial interpretive layer across public services, regulated sectors, and organisational decision-making. As these systems take on roles in retrieval, reasoning, classification, and decision-support, regulators require clarity on how models form and maintain their understanding of people, organisations, relationships, and ideas.</p>
 
-    <p>
-      AI Perception provides this clarity by defining the structures and evaluative principles that determine how models represent entities and how that representation influences downstream behaviour. For regulators, this discipline offers a coherent way to assess whether AI systems interpret entities consistently, transparently, and in alignment with real-world meaning.
-    </p>
+    <p>AI Perception provides this clarity by defining the structures and evaluative principles that determine how models represent entities and how that representation influences downstream behaviour. For regulators, this discipline offers a coherent way to assess whether AI systems interpret entities consistently, transparently, and in alignment with real-world meaning.</p>
 
     <h2>Regulatory challenges addressed by the EntityWorks Standard</h2>
 
-    <p>
-      Regulators face increasing pressure to evaluate the behaviour of AI systems without access to model internals or proprietary architectures. The EntityWorks Standard provides a structured way to assess representational behaviour using external, observable criteria.
-    </p>
+    <p>Regulators face increasing pressure to evaluate the behaviour of AI systems without access to model internals or proprietary architectures. The EntityWorks Standard provides a structured way to assess representational behaviour using external, observable criteria.</p>
 
     <p><strong>Key challenges addressed by the Standard include:</strong></p>
-
     <ul>
       <li>interpretive opacity, where regulators cannot see how a model is understanding or representing an entity</li>
       <li>inconsistent or unstable representations, which undermine reliability in regulated environments</li>
@@ -210,12 +145,9 @@
 
     <h2>How regulators can use the Standard</h2>
 
-    <p>
-      Regulators can use the EntityWorks Standard to establish a structured basis for evaluating how AI systems represent entities within their oversight remit. The Standard provides a clear set of definitions, interpretive rules, and diagnostic criteria that allow regulators to assess representational behaviour externally, without requiring technical access to model internals or proprietary systems.
-    </p>
+    <p>Regulators can use the EntityWorks Standard to establish a structured basis for evaluating how AI systems represent entities within their oversight remit. The Standard provides a clear set of definitions, interpretive rules, and diagnostic criteria that allow regulators to assess representational behaviour externally, without requiring technical access to model internals or proprietary systems.</p>
 
     <p><strong>The Standard enables regulators to:</strong></p>
-
     <ul>
       <li>assess representational behaviour using consistent, non-technical criteria</li>
       <li>set expectations and guidance for representational stability and accuracy</li>
@@ -224,18 +156,13 @@
       <li>harmonise evaluative approaches around a shared conceptual framework</li>
     </ul>
 
-    <p>
-      Regulators may draw on the Standard where it provides clarity, structure, or evaluative support within their existing oversight frameworks.
-    </p>
+    <p>Regulators may draw on the Standard where it provides clarity, structure, or evaluative support within their existing oversight frameworks.</p>
 
     <h2>What the Standard provides to regulators</h2>
 
-    <p>
-      The EntityWorks Standard offers regulators a coherent framework for understanding, evaluating, and governing the representational behaviour of AI systems. It provides the conceptual structures and criteria needed to assess how models form, update, and express their understanding of people, organisations, relationships, and ideas.
-    </p>
+    <p>The EntityWorks Standard offers regulators a coherent framework for understanding, evaluating, and governing the representational behaviour of AI systems. It provides the conceptual structures and criteria needed to assess how models form, update, and express their understanding of people, organisations, relationships, and ideas.</p>
 
     <p><strong>Regulators can draw on:</strong></p>
-
     <ul>
       <li>canonical definitions that establish consistent terminology</li>
       <li>structural frameworks describing how machine-interpreted identity is formed</li>
@@ -246,32 +173,24 @@
 
     <h2>Where to go next</h2>
 
-    <p>
-      For regulators seeking further detail on the discipline and its evaluative structures, the following pages provide the next points of reference within the EntityWorks Standard:
-    </p>
+    <p>For regulators seeking further detail on the discipline and its evaluative structures, the following pages provide the next points of reference within the EntityWorks Standard:</p>
 
     <ul>
-      <li><strong>The Standard</strong> — the structural, diagnostic, and governance criteria used to evaluate representational behaviour</li>
-      <li><strong>AI Perception</strong> — the disciplinary foundation that defines how AI systems form and maintain their understanding of entities</li>
-      <li><strong>Publications</strong> — formal papers and resources that expand the theory and regulatory applications of AI Perception</li>
+      <li><strong><a href="/the-standard.html">The Standard</a></strong> — the structural, diagnostic, and governance criteria used to evaluate representational behaviour</li>
+      <li><strong><a href="/ai-perception.html">AI Perception</a></strong> — the disciplinary foundation that defines how AI systems form and maintain their understanding of entities</li>
+      <li><strong><a href="/publications.html">Publications</a></strong> — formal papers and resources that expand the theory and regulatory applications of AI Perception</li>
     </ul>
 
-    <p>
-      These materials provide the definitions, structures, and criteria required to work with the discipline in regulatory contexts. Regulators may also request clarification or interpretive guidance from the EntityWorks Standards Office through the official correspondence channel.
-    </p>
+    <p>These materials provide the definitions, structures, and criteria required to work with the discipline in regulatory contexts. Regulators may also request clarification or interpretive guidance from the EntityWorks Standards Office through the official correspondence channel.</p>
 
-    <p class="last-updated">
-      Last updated: November 2025
-    </p>
+    <p class="last-updated">Last updated: November 2025</p>
   </main>
 
   <div id="footer"></div>
   <script>
     fetch("/footer.html")
       .then(response => response.text())
-      .then(html => {
-        document.getElementById("footer").innerHTML = html;
-      });
+      .then(html => { document.getElementById("footer").innerHTML = html; });
   </script>
 
 </body>
