--- a/archive.html
+++ b/archive.html
@@ -137,6 +137,7 @@
       <li>entityworks_2025-11-25_2025_0625.zip — archived internally on 25 November 2025 at 06:25</li>
       <li>ew-snapshot-2025-11-23-1540.zip — archived internally on 23 November 2025</li>
       <li>entityworks_2025-11-23_2025.zip — archived internally on 23 November 2025</li>
+      <li>2025-11-30 — Snapshot archived as entityworks_2025-11-30_1735.zip</li>
     </ul>
 
 
